Update link to larklearning

--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -7,13 +7,13 @@ html
     == javascript_include_tag "app"
   body
     .sticky
-      nav.top-bar data-options=("sticky_on: large") data-topbar="" role="navigation" 
+      nav.top-bar data-options=("sticky_on: large") data-topbar="" role="navigation"
         ul.title-area
           li.name
             h1
               a href="/"  ECMAScript6 Tutorial
           lwi.toggle-topbar.menu-icon
-            a href="#" 
+            a href="#"
               span Menu
         section.top-bar-section
           ul.right
@@ -46,18 +46,18 @@ html
     .footer.wrap
       .row
         .large-8.large-centered.small-10.small-centered
-          p 
-            |项目托管在 
+          p
+            |项目托管在
             a href="https://github.com/wendycan/es6tutorial" target="_blank"
               i.fa.fa-ok
               |GitHub
-          p 
-            |作者 
+          p
+            |作者
             a href="https://github.com/wendycan" target="_blank" wendy
-          p 
+          p
             |友情链接
-            a href="http://wendycan.org" target="_blank" wendy的小站
-            a href="http://yuetai.wendycan.org" target="_blank" 阅台
+            a href="http://larklearning.com" target="_blank" wendy的小站
+            a href="http://yuetai.larklearning.com" target="_blank" 阅台
     javascript:
       $(document).foundation();
       hljs.initHighlightingOnLoad();
