Fix bug with links

--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -56,7 +56,7 @@ html
             a href="https://github.com/wendycan" target="_blank" wendy
           p
             |友情链接
-            a href="http://larklearning.com" target="_blank" wendy的小站
+            a href="http://wendy.larklearning.com" target="_blank" wendy的小站
             a href="http://yuetai.larklearning.com" target="_blank" 阅台
     javascript:
       $(document).foundation();
